src/test/deca/syntax/valid/parser/oracle/class_with_asm_method3.deca
class H{
	int f(int x, float f) asm("Hello 
 World !");
}