src/test/deca/syntax/invalid/test_dir/added/parser/printx_with_void_after_comma.deca
{
	printx("Hello World !", 2,);
}
